# pear-diffusion

./: .compile.sh.swp  .gitignore  CMakeCache.txt  CMakeLists.txt  HalfCircle_Triangle.m  Makefile  README.md  bin.cpp  cmake_install.cmake  compile.sh  component.hpp  conference_pear.txt  diffusion.fig  diffusion.hpp  grid.hpp  main.cpp  nlsolver.hpp  pear_diffusion  pear_diffusion.cbp  pear_diffusion.m  pear_diffusion_2  pear_diffusion_2.cbp  prototype1.m  rdc.hpp  reaction.hpp  run_software.m  run_software.m~  show.m  workspace.mat
c++/: component.hpp  diffusion.hpp  grid.hpp  main.cpp  nlsolver.hpp  rdc.hpp  reaction.hpp
eigen-3.3.7/: CMakeLists.txt
git.rtfd/: TXT.rtf
grid/: HCTmesh2_Nodes.txt  HCTmesh3_Elements.txt  HCTmesh3_InnerEdges.txt  HCTmesh3_Nodes.txt  HCTmesh3_OuterEdges.txt  HCTmesh_Nodes.txt  HalfCircle.mat  HalfCircleMesh.mat  HalfCircle_Triangle.m  writematrix.m  writematrix.m~
grids/: HCTmesh2_Elements.txt  HCTmesh3.mat  HCTmesh3_Data.mat  HCTmesh3_InnerEdges.txt  HalfCircle_Triangle.m
header/: C++.tmpl  Matlab.tmpl
matlab/: hct_grid.m  show.m  show.m~  test_boundary_conditions.m
matlab-prototype/: analytical_derivatives.m  assemble_H.m  assemble_J.m  convergence_plot.m  convergence_plot.m~  evaluatesol.m  exe.m  exe.m~  exe_pear.m  prototype.m~  run.m  show.m  test_jacobian.m  test_jacobian.m~  workspace.m  workspace.mat  writematrix_.m
prototype/: HalfCircle.m  HalfCircle_Triangle.m  HalfCircle_Triangle.m~  analytical_derivatives.m  assemble_H.m  assemble_H_lin.m  assemble_J.m  assemble_K.m  assemble_f.m  exe 2.m  exe.m  exe.m~  run.m  (+11 more)
(+822 files in other folders)
